# wtui

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix
crates/wtui/: Cargo.toml
crates/wtui-core/: Cargo.toml
crates/wtui-core/src/: config.rs  db.rs  lib.rs  metrics.rs  models.rs  timeutils.rs
crates/wtui-core/tests/: config_tests.rs  db_tests.rs  metrics_tests.rs
crates/wtui-daemon/: Cargo.toml
crates/wtui-daemon/src/: main.rs
crates/wtui/src/: main.rs
