[workspace]
members = [
  "crates/wtui-core",
  "crates/wtui-daemon",
  "crates/wtui",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://example.com/wtui"
authors = ["wtui maintainers"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
directories = "5.0"
humantime = "2.1"
humantime-serde = "1.1"
indicatif = "0.17"
itertools = "0.12"
nix = { version = "0.27", default-features = false, features = ["fs"] }
once_cell = "1.19"
ratatui = "0.26"
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3"
thiserror = "1.0"
time = { version = "0.3", features = ["macros", "formatting", "parsing"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-appender = "0.2"
ctrlc = "3.4"
tempfile = "3.10"
rand = "0.8"
atty = "0.2"
crossterm = "0.27"

[profile.release]
lto = true
codegen-units = 1

[profile.dev]
debug = true
