[package]
name = "wtui-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
csv = { workspace = true }
directories = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
itertools = { workspace = true }
nix = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
signal-hook = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = "2.0"
predicates = "3.1"
