[package]
name = "wtui-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }
atty = { workspace = true }
directories = { workspace = true }
humantime = { workspace = true }
once_cell = { workspace = true }
signal-hook = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
wtui-core = { path = "../wtui-core" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = { workspace = true }
